HttpUnit release notes

Known problems:
    1. The "_new" and "_empty" frame targets are not handled correctly
    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.
    3. The regression test "pseudo-server" does not appear to run properly under Unix.

Limitations:
    1. JDK 1.2 or higher is required


Revision History:
20-Aug-2002

Problems fixed:
    1. JavaScript - HTML comments prevented JavaScript from working
    2. JavaScript - Errors were reported if Rhino was not present in the classpath

Additions:
    1. JavaScript - Added Checkbox.value property, along with Checkbox.defaultChecked and Input.name

19-Aug-2002

Additions:
    1. WebForm.getButtons() now returns all form buttons, including reset buttons and generic buttons.
    2. JavaScript: The "onClick" event is now supported for generic form buttons
    3. JavaScript: Form.submit() is now working


16-Aug-2002
Acknowledgements:
   Thanks to PeterRoyal for fixing the handling of query-only relative URLs and the IllegalStateException when
       scripting is disable.

Problems fixes:
   1. Relative URLs beginning with "?" were not being handled properly.
   2. Disabling scripting result in IllegalStateException being thrown.

Additions:
   1. JavaScript: The select() method is now defined as a no-op for controls
   2. JavaScript: Form.elements is now defined

14-Aug-2002
Additions:
   1. The focus() method is now defined as a no-op for all controls

Problems fixed:
   1. Embedded spaces in URLs are now encoded when a request is made

13-Aug-2002
Additions:
   1. The onChange event now works for Select controls, Text controls, and TextArea controls.

 9-Aug-2002
Additions:
   1. The SubmitButton class now supports a click() method to submit the form using that button.

 8-Aug-2002
Changes: