@@ -129,6 +129,18 @@ as are the following DOM elements:
 </ul>
 <h4>events</h4>
 <ul>
+<li>onClick - invoked when the state of the control is changed via form.setParameter or form.removeParameter</li>
+</ul>
+
+<h3>Radio</h3>
+<h4>properties</h4>
+<ul>
+<li>checked        - read/write - the state of the radio button</li>
+<li>defaultChecked - read-only  - the default state of the radio button</li>
+<li>value          - read/write - the value transmitted if the control is checked</li>
+</ul>
+<h4>events</h4>
+<ul>
 <li>onClick - invoked when the state of the control is changed via form.setParameter</li>
 </ul>
 
