@@ -4,10 +4,10 @@ Known problems:
     1. The "_new" and "_empty" frame targets are not handled correctly
     2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
        This behavior matches that currently used by IE and Navigator.
-    3. The regression test "pseudo-server" does not appear to run properly under Unix.
 
 Limitations:
     1. JDK 1.2 or higher is required
+    2. JavaScript support does not include document.write and some DOM properties
 
 
 Revision History:
@@ -16,9 +16,12 @@ Revision History:
 Problems fixed:
     1. JavaScript - HTML comments prevented JavaScript from working
     2. JavaScript - Errors were reported if Rhino was not present in the classpath
+    3. Fixed handling of error statuses when information is still sent on input stream
 
 Additions:
     1. JavaScript - Added Checkbox.value property, along with Checkbox.defaultChecked and Input.name
+    2. JavaScript - Added Radio.value, Radio.checked, and Radio.defaultChecked properties
+    3. JavaScript - Added Radio.onClick event support
 
 19-Aug-2002
 
